request json swagger
